# AdventOfCode2023

./: CMakeLists.txt  day1.cpp  day1.h  day24.cu  day4.cpp  day4.h  lines.cpp  lines.hpp  main.cpp  util.cpp  util.hpp
data/: day1_file.txt  day4_file.txt
